--- a/source/index.html
+++ b/source/index.html
@@ -292,13 +292,13 @@
               <label class="form__label" for="login">
                 Email</label>
               <input class="form__input js-modal-focus" id="login" type="email" value="info@enver.com"
-                placeholder="email@example.com" name="email" />
+                placeholder="email@example.com" name="email" required/>
             </div>
             <div class="form__group login__password-group">
               <label class="form__label" for="password">
                 Password</label>
               <input class="form__input" id="password" type="password" value="12345" placeholder="hello"
-                name="password" />
+                name="password" required/>
             </div>
             <div class="form__group form__group--checkbox login__checkbox-group">
               <label class="form__label" for="remember-password">
